History of this buildout
========================

6.0.5 (unreleased)
------------------

- MINA-126, Index nav-list diazo rules and styling. [lhuiskes]

- Migrate "Ruimtelijke Ordening" theme. MINA-125.  [jladage]

- Remove Hearing from addable type in a theme.  [jladage]

- SEO Properties should be enabled for Advisory, MREvent and Study.
  Fixed typos. MINA-128.  [jladage]

- Add styling for list-items inside article-theme-bodytext.  MINA-127.
  newsletter-mailchimp footer padding fix.
  article-vision a btn styling fix.  MINA-131
  [lhuiskes]

- Add image to Study on homepage. MINA-130.  [jladage]

- Related Documents to limitted, allow all types, also for study
  and event. MINA-124  [jladage]

- Rename label Nota to Oriëntatienota. MINA-129  [jladage]

- Fixed creating an advisory from a project.  MINA-123.  [maurits]

- Diazo rule for contact href in the dropdown.
  [lhuiskes]

- Fixed varnish_purge_hosts on ontwikkel.  [maurits]

- varnishd: specify the secret-file.  [maurits]

- Use collective.js.jqueryui 1.10.4 which has better cache settings.
  [maurits]

- Fixed cssregistry for production use.  Our main.css breaks on IE11
  and lower when it is registered with a media setting.  Also,
  reordered the css files so we get less combined files.  And include
  them all with ``link`` instead of ``@import``.  [maurits]

- varnish-clearcache: print if there is a failure.  [maurits]

- varnishd: listen on telnet.  [maurits]


6.0.4 (2016-03-02)
------------------

- Cook css/javascript resources in an upgrade step.  [maurits]

- Added varnish-clearcache part on deployment.  [maurits]


6.0.3 (2016-03-02)
------------------

- IE11 Flex fix, for all big browsers.
  [lhuiskes]

- Use latest eea.facetednavigation 8.8 and eea.jquery 8.7.  Added
  upgrade step for this.  [maurits]


6.0.2 (2016-02-29)
------------------

- Let /zoeken in the Zope root redirect back to /zoeken on the Plone
  Site.  [maurits]


6.0.1 (2016-02-29)
------------------
